# Couse_work_3

./: README.md  pyproject.toml
src/: api.py  config.py  db.py  db_manager.py  main.py
